fix(061a9e7): do not set z-index for focused draggable block

--- a/src/css/dumbymap.css
+++ b/src/css/dumbymap.css
@@ -639,7 +639,6 @@ p a[href^='http']::after,
   &:has(.dumby-block.focus) {
     display: block;
 
-    z-index: 9001;
     outline: solid #505050 1px;
     border-color: #505050;
   }
